unified_tests/control_flow/if_else_condition_trailing_token_before_block/expect/build.text.stderr
lib.copp:2:15: error: expected symbol
      if 1 <= 2 b {
                ^
